--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>quote generator</title>
+    <!-- style link -->
     <link rel="stylesheet" href="style.css">
+    <!-- fa -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div class="quote-container" id="quote-container">
+        <!--Quote-->
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
+            <span id="quote">What you are is what you have been.what you'all be is what you do now.</span>
+            <i class="fas fa-quote-right"></i>
+        </div>
+        <!-- Author -->
+        <div class="quote-author"></div>
+    </div>
     
+
+    <!-- script -->
+    <script src="index.js"></script>
 </body>
-<script src="index.js"></script>
-</html>
+
+</html> 
