--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -15,11 +15,20 @@
         <!--Quote-->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">What you are is what you have been.what you'all be is what you do now.</span>
+            <span id="quote"></span>
             <i class="fas fa-quote-right"></i>
         </div>
         <!-- Author -->
-        <div class="quote-author"></div>
+        <div class="quote-author" >
+            <span id="author"></span>
+        </div>
+        <!-- Buttons -->
+        <div class="button-container" >
+            <button class="twitter-button" id="twitter" title="Tweet this">
+                <i class="fab fa-twitter"></i>
+            </button>
+            <button id="new-quote">New Quote</button>
+        </div>
     </div>
     
 
