--- a/infinite scroller/index.html
+++ b/infinite scroller/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>infinite scroll</title>
+
+    <!-- fa -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- title -->
+    <h1>Unplash Api Infinite Scroll</h1>
+    <!-- loader -->
+    <div class="loader" id="loader" hidden>
+        <img src="loader.svg" alt="loading" srcset="">
+    </div>
+
+    <!-- Image container -->
+    <div class="image-container" id="image-container">
+    </div>
+
+    <!-- script -->
+    <script src="app.js"></script>
 </body>
 </html>
